; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-sched.c_get_new_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-sched.c_get_new_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sched_atom = type { i64, i32 }
%struct.task_desc = type { i64, %struct.sched_atom** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.sched_atom* (%struct.task_desc*, i32)* @get_new_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.sched_atom* @get_new_event(%struct.task_desc* %0, i32 %1) #0 {
  %3 = alloca %struct.task_desc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sched_atom*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.task_desc* %0, %struct.task_desc** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = call %struct.sched_atom* @zalloc(i32 16)
  store %struct.sched_atom* %8, %struct.sched_atom** %5, align 8
  %9 = load %struct.task_desc*, %struct.task_desc** %3, align 8
  %10 = getelementptr inbounds %struct.task_desc, %struct.task_desc* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %6, align 8
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.sched_atom*, %struct.sched_atom** %5, align 8
  %14 = getelementptr inbounds %struct.sched_atom, %struct.sched_atom* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 8
  %15 = load i64, i64* %6, align 8
  %16 = load %struct.sched_atom*, %struct.sched_atom** %5, align 8
  %17 = getelementptr inbounds %struct.sched_atom, %struct.sched_atom* %16, i32 0, i32 0
  store i64 %15, i64* %17, align 8
  %18 = load %struct.task_desc*, %struct.task_desc** %3, align 8
  %19 = getelementptr inbounds %struct.task_desc, %struct.task_desc* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = add i64 %20, 1
  store i64 %21, i64* %19, align 8
  %22 = load %struct.task_desc*, %struct.task_desc** %3, align 8
  %23 = getelementptr inbounds %struct.task_desc, %struct.task_desc* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = mul i64 8, %24
  store i64 %25, i64* %7, align 8
  %26 = load %struct.task_desc*, %struct.task_desc** %3, align 8
  %27 = getelementptr inbounds %struct.task_desc, %struct.task_desc* %26, i32 0, i32 1
  %28 = load %struct.sched_atom**, %struct.sched_atom*** %27, align 8
  %29 = load i64, i64* %7, align 8
  %30 = call %struct.sched_atom** @realloc(%struct.sched_atom** %28, i64 %29)
  %31 = load %struct.task_desc*, %struct.task_desc** %3, align 8
  %32 = getelementptr inbounds %struct.task_desc, %struct.task_desc* %31, i32 0, i32 1
  store %struct.sched_atom** %30, %struct.sched_atom*** %32, align 8
  %33 = load %struct.task_desc*, %struct.task_desc** %3, align 8
  %34 = getelementptr inbounds %struct.task_desc, %struct.task_desc* %33, i32 0, i32 1
  %35 = load %struct.sched_atom**, %struct.sched_atom*** %34, align 8
  %36 = icmp ne %struct.sched_atom** %35, null
  %37 = xor i1 %36, true
  %38 = zext i1 %37 to i32
  %39 = call i32 @BUG_ON(i32 %38)
  %40 = load %struct.sched_atom*, %struct.sched_atom** %5, align 8
  %41 = load %struct.task_desc*, %struct.task_desc** %3, align 8
  %42 = getelementptr inbounds %struct.task_desc, %struct.task_desc* %41, i32 0, i32 1
  %43 = load %struct.sched_atom**, %struct.sched_atom*** %42, align 8
  %44 = load i64, i64* %6, align 8
  %45 = getelementptr inbounds %struct.sched_atom*, %struct.sched_atom** %43, i64 %44
  store %struct.sched_atom* %40, %struct.sched_atom** %45, align 8
  %46 = load %struct.sched_atom*, %struct.sched_atom** %5, align 8
  ret %struct.sched_atom* %46
}

declare dso_local %struct.sched_atom* @zalloc(i32) #1

declare dso_local %struct.sched_atom** @realloc(%struct.sched_atom**, i64) #1

declare dso_local i32 @BUG_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
